kubernetes/vader/applications/networking/adguardhome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-service
  namespace: networking


spec:
  type: ClusterIP
  selector:
    app: adguardhome
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-dns-service
  namespace: networking

spec:
  type: LoadBalancer
  selector:
    app: adguardhome
  ports:
    - name: dns
      port: 52
      targetPort: dns
