kubernetes/vader/applications/networking/adguardhome/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: adguardhome-ingressroute
  namespace: networking

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`adguardhome.feldman.in`)
      kind: Rule
      services:
        - name: adguardhome-service
          port: 80
  tls:
    secretName: adguardhome-feldman-in-tls
